--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,7 +57,8 @@ body
     text-align: center;
     font-weight: bold;
     font-size: large;
-    background-color: black;
-    color: blanchedalmond;
-    padding: 0.1em 0 0.1em 0;
+    background-color: rgb(168, 163, 163);
+    color: rgb(5, 5, 5);
+    padding: 0.1em;
+    margin: auto;
 }
